clusters/building-blocks/other/apps/homepage/app/homepage-ingressroute-tinyauth.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-tinyauth
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`my.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: tinyauth
          namespace: security
      services:
        - kind: Service
          name: homepage
          namespace: default
          passHostHeader: true
          port: 3000
          scheme: http
