clusters/building-blocks/other/apps/homepage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: edge-local-ipallowlist@kubernetescrd
spec:
  parentRefs:
    - name: gateway
      namespace: edge
  hostnames:
    - "my.home.${DOMAIN_NAME}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
